--- a/app/stylesheets/outfits/_new.sass
+++ b/app/stylesheets/outfits/_new.sass
@@ -198,14 +198,7 @@ body.outfits-new
         width: 80px
   
   #latest-contribution
-    border:
-      color: $soft-border-color
-      style: solid
-      width: 1px 0
-    font-size: 85%
-    margin: 1em 0
-    padding: .5em 0
-    text-align: center
+    +subtle-banner
     
     #recent-contributions-link
       font-weight: bold
