--- a/app/stylesheets/partials/clean/_mixins.sass
+++ b/app/stylesheets/partials/clean/_mixins.sass
@@ -106,3 +106,13 @@
   background: $warning-bg-color
   border: 1px solid $warning-border-color
   color: $warning-color
+
+=subtle-banner
+  border:
+    color: $soft-border-color
+    style: solid
+    width: 1px 0
+  font-size: 85%
+  margin: 1em 0
+  padding: .5em 0
+  text-align: center
