a few tweaks to items#show contributors appearance

--- a/app/stylesheets/items/_show.sass
+++ b/app/stylesheets/items/_show.sass
@@ -25,6 +25,8 @@ body.items-show
     margin-bottom: 0
     
   #item-preview
+    +clearfix
+    
     div
       float: left
       
@@ -112,6 +114,9 @@ body.items-show
   #item-contributors
     +subtle-banner
     clear: both
+    margin:
+      bottom: 0
+      top: 2em
     
     header
       display: inline
