i18n for outfits#new (and layouts#application), including caching

--- a/app/stylesheets/outfits/_new.sass
+++ b/app/stylesheets/outfits/_new.sass
@@ -203,6 +203,9 @@ body.outfits-new
     #recent-contributions-link
       font-weight: bold
       margin-right: .5em
+      
+      &::after
+        content: ":"
     
     #latest-contribution-created-at
       color: $soft-text-color
