i18n for contributions#index

--- a/app/stylesheets/contributions/_index.sass
+++ b/app/stylesheets/contributions/_index.sass
@@ -30,9 +30,8 @@ body.contributions-index
       top: 0
       width: 80px
       z-index: 2
-    span
-      &.username, &.contributed-name
-        font-weight: bold
-      &.time-ago
-        display: block
-        font-size: 75%
+    .username, .contributed-name
+      font-weight: bold
+    .time-ago
+      display: block
+      font-size: 75%
