--- a/app/views/contributions/_contribution.html.haml
+++ b/app/views/contributions/_contribution.html.haml
@@ -1,10 +1,11 @@
 - contributed = contribution.contributed
 = content_tag_for :li, contribution do
   %span.point-value= contribution.point_value
-  %span.username
-    = link_to contribution.user.name, user_contributions_path(contribution.user)
-  showed us
-  = contributed_description contributed
-  %span.time-ago{:title => contribution.created_at.to_s}
-    = time_ago_in_words(contribution.created_at)
-    ago
+  = t 'contributions.contribution.description_html',
+      :user_link => link_to(contribution.user.name,
+                            user_contributions_path(contribution.user),
+                            :class => 'username'),
+      :contributed_description => contributed_description(contributed)
+  .time-ago
+    = t 'contributions.contribution.created_at_html',
+        :created_at_ago => labeled_time_ago_in_words(contribution.created_at)
